# chat-with-your-documents

./: .dockerignore  .env.example  Dockerfile  PKG-INFO  README.md  SOURCES.txt  __init__.py  app.js  basic_usage.py  docker-compose.yml  embeddings.py  main.py  observability.py  pyproject.toml  rag_pipeline.py  requires.txt  retrieval.py  streaming.py  styles.css  vector_store.py
data/: milvus_lite.db
examples/: streaming_client.py
scripts/: query.py  test_memory.py  verify_setup.py
src/: config.py
src/api/: __init__.py  main.py  models.py
src/api/routes/: ingestion.py
src/core/: __init__.py  callbacks.py  chunking_strategies.py  conversation_manager.py  document_processor.py  file_storage.py  local_llm.py  rag_pipeline.py  vector_store.py
static/: index.html
static/ui/: index.html
