[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-with-your-documents"
version = "0.1.0"
description = "Production-grade Chat With Your Documents RAG system"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["rag", "llm", "fastapi", "vector-database", "chatbot"]

dependencies = [
    # =========================
    # FastAPI & Server
    # =========================
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.2",
    # =========================
    # LangChain ecosystem
    # =========================
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    # =========================
    # Vector Database (ARM-safe)
    # =========================
    "pymilvus>=2.3.0",
    "milvus-lite>=2.5.1", # Embedded Milvus (no milvus pip package!)
    # =========================
    # Embeddings & Models
    # =========================
    "sentence-transformers>=2.3.1",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "torch>=2.1.0",
    # bitsandbytes only for x86_64 (ARM-safe guard)
    "bitsandbytes>=0.41.0; platform_machine == 'x86_64'",
    # =========================
    # Retrieval & Ranking
    # =========================
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    # =========================
    # PDF & Document Processing
    # =========================
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.3",
    # =========================
    # Data Validation & Config
    # =========================
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # =========================
    # Evaluation
    # =========================
    "ragas>=0.1.0",
    "datasets>=2.16.0",
    # =========================
    # Utilities
    # =========================
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    "httpx>=0.26.0",
    # =========================
    # Observability & Logging
    # =========================
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "bitsandbytes>=0.49.1",
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
